test/corpus/posting_virtual.txt
================================================================================
Unbalanced virtual posting
================================================================================
2026-01-24
    assets:checking      $-50
    expenses:food         $50
    (budget:food)        $-50

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting_virtual
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))))

================================================================================
Balanced virtual posting
================================================================================
2026-01-24
    assets:checking      $-50
    expenses:food         $50
    [budget:food]        $-50
    [budget:available]    $50

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting_virtual_balanced
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting_virtual_balanced
      (account)
      (amount
        (commodity)
        (quantity)))))

================================================================================
Amountless unbalanced virtual posting
================================================================================
2026-01-24
    assets:checking      $-50
    expenses:food         $50
    (tracking:food)

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting_virtual
      (account))))
