test/corpus/status.txt
================================================================================
A transaction with cleared status
================================================================================
2026-01-24 * Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (description)))

================================================================================
A transaction with pending status
================================================================================
2026-01-24 ! Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (description)))

================================================================================
More spaces around the status
================================================================================
2026-01-24     !       Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (description)))

================================================================================
Status with no description
================================================================================
2026-01-24 *

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)))

================================================================================
Pending status with no description
================================================================================
2026-01-24 !

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)))
