test/corpus/tag.txt
================================================================================
Tag without value
================================================================================
2026-01-24 Groceries
  ; some-tag:

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)))))

================================================================================
Tag with value
================================================================================
2026-01-24 Groceries
  ; tag1: this is tag1's value

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value)))))

================================================================================
Multiple tags
================================================================================
2026-01-24 Groceries
  ; tag1:value 1, tag2:value 2

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value))
      (tag
        (tag_name)
        (tag_value)))))

================================================================================
Multiple tags with trailing comment text
================================================================================
2026-01-24 Groceries
  ; tag1:value 1, tag2:value 2, comment text

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value))
      (tag
        (tag_name)
        (tag_value)))))

================================================================================
Tag in transaction header
================================================================================
2026-01-24 Groceries ; some-tag:

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)))))

================================================================================
Tag with value in transaction header
================================================================================
2026-01-24 Groceries ; receipt:lost

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value)))))

================================================================================
Tag in posting
================================================================================
2026-01-24 Groceries
    Expenses:Food  $1  ; postingtag:

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (commodity)
        (quantity))
      (comment
        (tag
          (tag_name))))))

================================================================================
Tag in transaction body comment
================================================================================
2026-01-24 Groceries
    ; tag1: value 1
    Expenses:Food  $1
    Assets:Checking

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
UTF tags
================================================================================
2026-01-24 Groceries
    Expenses:Food  $1  ; МОЙТЭГ:ЗНАЧЕНИЕ

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (commodity)
        (quantity))
      (comment
        (tag
          (tag_name)
          (tag_value))))))

================================================================================
Tag name with digits and hyphens
================================================================================
2026-05-15 Description  ; 2026-05-london:
    a  1
    b

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)))
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Tag names with punctuation, leading underscore, percent
================================================================================
2026-05-15 Description  ; weird.tag+chars: x, _under: y, 100%: z
    a  1
    b

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment
      (tag
        (tag_name)
        (tag_value))
      (tag
        (tag_name)
        (tag_value))
      (tag
        (tag_name)
        (tag_value)))
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Word followed by space-colon is not a tag
================================================================================
2026-05-15 Description  ; not a tag : because of the space
    a  1
    b

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))
