test/corpus/transaction.txt
================================================================================
Simple transaction
================================================================================
2026-01-24
    Assets:Checking  1000
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Transaction with description and postings
================================================================================
2008/01/01 income
  assets:bank:checking   $1
  income:salary         $-1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))))

================================================================================
Transaction with all optional header fields
================================================================================
2026-01-24 * (REF123) Grocery shopping ; receipt lost
    Expenses:Food  50 USD
    Assets:Cash  -50 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (description)
    (comment)
    (posting
      (account)
      (amount
        (quantity)
        (commodity)))
    (posting
      (account)
      (amount
        (sign)
        (quantity)
        (commodity)))))

================================================================================
Transaction with body comment
================================================================================
2026-01-24 Groceries
    ; shopping receipt
    Expenses:Food  50
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Multiple transactions
================================================================================
2026-01-01 First transaction
    Assets  100
    Expenses

2026-01-02 Second transaction
    Assets  200
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account)))
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Transactions separated by a whitespace-only line
================================================================================
2026-01-01 First
    Assets  100
    Expenses
   
2026-01-02 Second
    Assets  200
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account)))
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Trailing whitespace after header and posting
================================================================================
2026-01-01 Trailing spaces  
    Assets  100   
    Expenses	

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))
